c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/extra_credit/bitshift_void.c
// Can't perform bitshift operations with void operands
void f(void){
    return;
}

int main(void) {
    int x = 10;
    x << f();
    return 0;
}